--- a/styles/indexlarge.css
+++ b/styles/indexlarge.css
@@ -1,4 +1,14 @@
 @media only screen and (min-width: 64em ) {
-    
-    
+    header h1 {
+        font-size: 60px;
+    }
+   img.mtnlogo {
+    width:15em;
+}
+    img.headermtn {
+    width:15em;
+} 
+    header {
+        justify-content: space-between;
+    }
 }
