--- a/styles/indexmain.css
+++ b/styles/indexmain.css
@@ -1,35 +1,65 @@
 * { box-sizing: border-box;} 
-
+header h1 {
+    font-size: 16px;
+    color: #5e2bb5; 
+    white-space: pre;
+    padding-left: 2%;
+    padding-right: 2%;
+    justify-content: center;
+    
+}
+img.mtnlogo {
+    width:3em;
+    padding-right: 2%;
+    margin-bottom: px;
+    padding-bottom: 0px;
+    padding-top: 2%;
+}
+img.headermtn {
+    width:4em;
+    padding-left: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
     
 body{
     background-color: #f3e4d8;
     font-family: 'PT Serif', serif;
+    padding-left:5%;
+    padding-right:5%;   
 }
 
 header, nav, main, footer {
   max-width: 2100px;
-   
-   
 }
 header {
         display: flex;
         flex:row;
         background-color: #e47521;
-        justify-content: space-around;
-        
-    }
- a:link {color:#e47521}
-
-a:link {text-decoration:none}
-    header img {
-        padding:2%;
-        
-    }
-    h1{
-        color: #5e2bb5;
-        font-size: 70px;
+        justify-content: center;
+        width:100%;
+        height:100%;
+        text-align: center;
         vertical-align: middle;
-        align-content: center;
+        ;
+    }
+header img {
+    width:100%;         
+    height:100%;
+   
+}
+a:link {color:#e47521}
+a:link {text-decoration:none}
+main{
+    display: grid;
+    grid-template-columns: 100%;
+    justify-content: center;
+}
+main img {
+    width:100%;
+}
+h2 {
+    text-align: center;
 }
 footer{
     background-color: #242f0e;
@@ -38,5 +68,9 @@ footer{
     flex:column;
     justify-content: center;
     
+}
+footer a{
+    color:#e47521;
+    text-decoration: none;
 }
     
