--- a/styles/adventuremedium.css
+++ b/styles/adventuremedium.css
@@ -21,34 +21,15 @@
 }
     .mtn_header img.headermtn {
     width:9em;
-}       
-    .row_1{
+}
+    .tours {
         display:grid;
-        grid-template-columns: 50% 50%;
-        grid-column-gap: 14px;
-        grid-row-gap: 70px;
-        grid-template-rows: 400px 400px;
-    }
- 
-   
-    .tour .tourbtn{
-        width:90px;
-        height:25px;
-    }
-    .tour .tourbtn:hover{
-        background-color: #e47521;
-    }
-   
-    .row_2{
-        display:grid;
-        grid-template-columns: 50% 50%;
-        grid-column-gap: 14px;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 30px;
     }
     main img {
         width:100%;
-        height: 100%;
+        height: 30vw;
     }
-
-
     
 }
