--- a/styles/salesmain.css
+++ b/styles/salesmain.css
@@ -51,31 +51,24 @@ header, nav, main, footer {
     height:100%;
    
 }
-a:link {color:#e47521}
-a:link {text-decoration:none}
-main{
+.bikesales{
     display: grid;
-    grid-template-columns:100%;
-    justify-content: center;
-    
+    grid-template-columns: 100%;
+   
 }
-main img {
-    width:100%;
-    
-}
-h2 {
-    text-align: center;
-}
+
 .mtn_footer{
     background-color: #242f0e;
     color: #e47521;
-    display: flex;
-    flex:column;
-    justify-content: center;
+    text-align: center;
+    
     
 }
 .mtn_footer a{
     color:#e47521;
     text-decoration: none;
 }
-    
+main img {
+    width:100%;
+    height: 100%;
+}
