--- a/styles/thanksmain.css
+++ b/styles/thanksmain.css
@@ -51,21 +51,6 @@ header, nav, main, footer {
     height:100%;
    
 }
-a:link {color:#e47521}
-a:link {text-decoration:none}
-main{
-    display: grid;
-    grid-template-columns:100%;
-    justify-content: center;
-    
-}
-main img {
-    width:100%;
-    
-}
-h2 {
-    text-align: center;
-}
 .mtn_footer{
     background-color: #242f0e;
     color: #e47521;
@@ -78,4 +63,25 @@ h2 {
     color:#e47521;
     text-decoration: none;
 }
+.eventtitle {
+    color: #90b742;
+    text-align: center;
+    margin:0px;
+    padding:0px;
     
+}
+main form {
+    display:flex;
+    flex:column nowrap;
+}
+form label.rform {
+    display:block;
+}
+form label {
+    padding:10px;
+    
+}
+
+form textarea {
+    resize: none;
+}
