--- a/styles/eventmain.css
+++ b/styles/eventmain.css
@@ -25,7 +25,11 @@
     padding-top: 2%;
     padding-bottom: 2%;
 }
-    
+
+img {
+    width:100%;
+
+}
 body{
     background-color: #f3e4d8;
     font-family: 'PT Serif', serif;
