--- a/styles/adventuremedium.css
+++ b/styles/adventuremedium.css
@@ -2,7 +2,7 @@
     .mtn_header h1 {
       font-size: 6vw;
     }
-    #bicyclemenu {
+    #bmenu {
         display:flex;
         flex:row wrap;
         justify-content: space-around;
@@ -31,5 +31,13 @@
         width:100%;
         height: 30vw;
     }
-    
+    nav button{
+        display:none;
+    }
+     nav ul.hide {
+        display:block;
+    }
+     nav ul li{
+        white-space: nowrap;
+    }
 }
