--- a/styles/contactmedium.css
+++ b/styles/contactmedium.css
@@ -2,7 +2,7 @@
     .mtn_header h1 {
       font-size: 6vw;
     }
-    #bicyclemenu {
+    #bmenu {
         display:flex;
         flex:row wrap;
         justify-content: space-around;
@@ -24,5 +24,14 @@
 }
     iframe {
         height:40vw;
+    }
+    nav button{
+        display: none;
+    }
+     nav ul.hide {
+        display:block;
+    }
+     nav ul li{
+        white-space: nowrap;
     }
 }
