--- a/styles/eventmain.css
+++ b/styles/eventmain.css
@@ -89,3 +89,40 @@ form label {
 form textarea {
     resize: none;
 }
+nav ul {
+    list-style-type: none;
+    padding:0;
+    margin:0;
+}
+nav button {
+    display:block;
+}
+nav ul li a {
+    display:block;
+    padding: .8rem 2%;
+    text-decoration: none;
+    color: #000;
+    border-top: 1px solid rgba(0,0,0,0.3);
+}
+a:visited{
+    color:#e47521;
+}
+a:hover {
+    background-color: #90b742;
+}
+nav ul li.active a{
+    
+    background-color:#90b742;
+}
+nav ul #bicyclemenu li a {
+    
+}
+nav ul.hide {
+    display: none;
+}
+.clearfix:after {
+    content:"";
+    display:table;
+    clear:both;
+}
+ 
