--- a/styles/eventmedium.css
+++ b/styles/eventmedium.css
@@ -2,7 +2,7 @@
     .mtn_header h1 {
       font-size: 6vw;
     }
-    #bicyclemenu {
+    #bmenu {
         display:flex;
         flex:row wrap;
         justify-content: space-around;
@@ -22,5 +22,13 @@
     .mtn_header img.headermtn {
     width:9em;
 }
-    
+    nav button{
+        display:none;
+    } 
+    nav ul.hide {
+        display:block;
+    } 
+     nav ul li{
+        white-space: nowrap;
+    }
 }
