--- a/styles/indexmain.css
+++ b/styles/indexmain.css
@@ -51,8 +51,9 @@ header, nav, main, footer {
     height:100%;
    
 }
-a:link {color:#e47521}
-a:link {text-decoration:none}
+
+
+
 main{
     display: grid;
     grid-template-columns:100%;
@@ -78,4 +79,38 @@ h2 {
     color:#e47521;
     text-decoration: none;
 }
+nav ul {
+    list-style-type: none;
+    padding:0;
+    margin:0;
+}
+
+nav ul li a {
+    display:block;
+    padding: .8rem 2%;
+    text-decoration: none;
+    color: #000;
+    border-top: 1px solid rgba(0,0,0,0.3);
+}
+a:visited{
+    color:#e47521;
+}
+a:hover {
+    background-color: #90b742;
+}
+nav ul li.active a{
     
+    background-color:#90b742;
+}
+nav ul #bicyclemenu li a {
+    
+}
+nav ul.hide {
+    display: none;
+}
+.clearfix:after {
+    content:"";
+    display:table;
+    clear:both;
+}
+ 
