--- a/styles/thanksmedium.css
+++ b/styles/thanksmedium.css
@@ -2,7 +2,7 @@
     .mtn_header h1 {
       font-size: 6vw;
     }
-    #bicyclemenu {
+    #bmenu {
         display:flex;
         flex:row wrap;
         justify-content: space-around;
