--- a/styles/indexmain.css
+++ b/styles/indexmain.css
@@ -28,7 +28,7 @@
     
 body{
     background-color: #f3e4d8;
-    font-family: 'PT Serif', serif;
+    font-family: 'Anton', serif;
     padding-left:4%;
     padding-right:4%;   
 }
