--- a/styles/saleslarge.css
+++ b/styles/saleslarge.css
@@ -19,8 +19,9 @@
         grid-row-gap: 30px;
         padding-left: 4%;
         padding-right: 4%;
-        
+        margin-bottom: 300px;
         
     }
     
+   
 }
