--- a/styles/indexmedium.css
+++ b/styles/indexmedium.css
@@ -17,6 +17,7 @@
         
         
     }
+   
     nav ul li{
         white-space: nowrap;
     }
@@ -26,15 +27,17 @@
     .mtn_header img.headermtn {
     width:9em;
 }       
-    .row_1{
-        display:grid;
-        grid-template-columns: 50% 50%;
-        grid-column-gap: 14px;
-        grid-row-gap: 70px;
-        grid-template-rows: 400px 400px;
-    }
- 
    
+    main h2 {
+        font-size: 4vw;
+    }
+    main p {
+        font-size: 
+    }
+    .tour p {
+        font-size: 24px;
+        
+    }
     .tour .tourbtn{
         width:90px;
         height:25px;
@@ -43,11 +46,7 @@
         background-color: #e47521;
     }
    
-    .row_2{
-        display:grid;
-        grid-template-columns: 50% 50%;
-        grid-column-gap: 14px;
-    }
+    
     main img {
         width:100%;
         height: 100%;
