--- a/styles/servicemain.css
+++ b/styles/servicemain.css
@@ -28,7 +28,7 @@
     
 body{
     background-color: #f3e4d8;
-    font-family: 'PT Serif', serif;
+     font-family: 'Anton', serif;
     padding-left:4%;
     padding-right:4%;   
 }
@@ -117,4 +117,6 @@ nav ul.hide {
 h2{
     text-align: center;
 }
- 
+i {
+    font-size: 24px;
+}
