--- a/styles/adventuremain.css
+++ b/styles/adventuremain.css
@@ -54,8 +54,7 @@ header, nav, main, footer {
 .mtn_footer{
     background-color: #242f0e;
     color: #e47521;
-    display: flex;
-    flex:column;
+    text-align: center;
     justify-content: center;
     
 }
