--- a/styles/contactmain.css
+++ b/styles/contactmain.css
@@ -54,10 +54,7 @@ header, nav, main, footer {
 .mtn_footer{
     background-color: #242f0e;
     color: #e47521;
-    display: flex;
-    flex:column;
-    justify-content: center;
-    
+   text-align: center;
 }
 .mtn_footer a{
     color:#e47521;
