--- a/styles/salesmain.css
+++ b/styles/salesmain.css
@@ -64,9 +64,8 @@ html,body{
 .mtn_footer{
     background-color: #242f0e;
     color: #e47521;
-    display:flex;
-    justify-content: center;
-    flex:column;
+   text-align: center;
+    
     margin-top: 200px;
 }
 
