--- a/styles/servicemedium.css
+++ b/styles/servicemedium.css
@@ -4,7 +4,7 @@
     }
     #bmenu {
         display:flex;
-        flex:row wrap;
+        flex-flow:row wrap;
         justify-content: space-around;
         list-style-type: none;
         
